force-app/main/default/objects/Lead/fields/Action_Taken_Other__c.field-meta.xml
<CustomField>
    <fullName>Action_Taken_Other__c</fullName>
    <label>Action Taken (Other)</label>
    <type>TextArea</type>
</CustomField>