force-app/main/default/objects/Lead/fields/Additional_Details__c.field-meta.xml
<CustomField>
    <fullName>Additional_Details__c</fullName>
    <label>Additional Details</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Closed- Account Created</fullName>
            </value>
            <value>
                <fullName>Duplicate Account with new Contact Information</fullName>
            </value>
            <value>
                <fullName>Not the right time to do business</fullName>
            </value>
            <value>
                <fullName>The company is a mess</fullName>
            </value>
            <value>
                <fullName>It doesn&#39;t make sense, we will never match their asked price</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>