force-app/main/default/objects/Lead/fields/Additional_Details_Other__c.field-meta.xml
<CustomField>
    <fullName>Additional_Details_Other__c</fullName>
    <label>Additional Details - Other</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>