force-app/main/default/objects/Lead/fields/Bulk_Upload__c.field-meta.xml
<CustomField>
    <fullName>Bulk_Upload__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bulk Upload</label>
    <type>Checkbox</type>
</CustomField>