force-app/main/default/objects/Lead/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Suppliers</fullName>
            </value>
            <value>
                <fullName>Universities (Students)</fullName>
            </value>
            <value>
                <fullName>Competitor</fullName>
            </value>
            <value>
                <fullName>Adhesive Coating &amp; Foams</fullName>
            </value>
            <value>
                <fullName>Biopolymers</fullName>
            </value>
            <value>
                <fullName>Converting &amp; Packaging Services</fullName>
            </value>
            <value>
                <fullName>Disinfectant Solutions</fullName>
            </value>
            <value>
                <fullName>Filling Solutions</fullName>
            </value>
            <value>
                <fullName>Formulation, Mixing, Compounding, Milling, and Calendaring</fullName>
            </value>
            <value>
                <fullName>Hydrocolloid</fullName>
            </value>
            <value>
                <fullName>Iodine Impregnation</fullName>
            </value>
            <value>
                <fullName>Sterilization Services</fullName>
            </value>
            <value>
                <fullName>Transportation Filtration</fullName>
            </value>
            <value>
                <fullName>Water Filtration</fullName>
            </value>
            <value>
                <fullName>Industrial Processes</fullName>
            </value>
            <value>
                <fullName>HVAC/APC</fullName>
            </value>
            <value>
                <fullName>Life Sciences</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>