force-app/main/default/objects/Lead/fields/Follow_Up__c.field-meta.xml
<CustomField>
    <fullName>Follow_Up__c</fullName>
    <label>Follow Up Date</label>
    <type>Date</type>
</CustomField>