force-app/main/default/objects/Lead/fields/Follow_Up_Action_Requested__c.field-meta.xml
<CustomField>
    <fullName>Follow_Up_Action_Requested__c</fullName>
    <label>Follow Up Action Requested</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Arrange a meeting</fullName>
            </value>
            <value>
                <fullName>Phone Call</fullName>
            </value>
            <value>
                <fullName>Info Material</fullName>
            </value>
            <value>
                <fullName>Pricing</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Shipping of Samples</fullName>
            </value>
            <value>
                <fullName>Follow Up Given Materials</fullName>
            </value>
            <value>
                <fullName>No Action</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>