force-app/main/default/objects/Lead/fields/Follow_Up_Assignee__c.field-meta.xml
<CustomField>
    <fullName>Follow_Up_Assignee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Follow Up Assignee</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Leads</relationshipName>
    <type>Lookup</type>
</CustomField>