force-app/main/default/objects/Lead/fields/Follow_Up_Timeframe__c.field-meta.xml
<CustomField>
    <fullName>Follow_Up_Timeframe__c</fullName>
    <label>Follow Up Timeframe</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Follow Up</fullName>
                <default>true</default>
                <label>Follow Up</label>
            </value>
            <value>
                <fullName>30 Days</fullName>
            </value>
            <value>
                <fullName>60 Days</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>