force-app/main/default/objects/Lead/fields/W2L_How_did_you_hear_about_us__c.field-meta.xml
<CustomField>
    <fullName>W2L_How_did_you_hear_about_us__c</fullName>
    <label>How did you hear about us?</label>
    <type>TextArea</type>
</CustomField>