force-app/main/default/objects/Lead/fields/W2L_I_d_like_to_see_product_samples__c.field-meta.xml
<CustomField>
    <fullName>W2L_I_d_like_to_see_product_samples__c</fullName>
    <defaultValue>false</defaultValue>
    <label>I&#39;d like to see product samples</label>
    <type>Checkbox</type>
</CustomField>