force-app/main/default/objects/Lead/fields/W2L_I_m_interested_in_a_quote__c.field-meta.xml
<CustomField>
    <fullName>W2L_I_m_interested_in_a_quote__c</fullName>
    <defaultValue>false</defaultValue>
    <label>I&#39;m interested in a quote</label>
    <type>Checkbox</type>
</CustomField>