force-app/main/default/objects/Lead/fields/W2L_Inquiry__c.field-meta.xml
<CustomField>
    <fullName>W2L_Inquiry__c</fullName>
    <label>Inquiry</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>