force-app/main/default/objects/Lead/fields/W2L_Markets_Operating_In__c.field-meta.xml
<CustomField>
    <fullName>W2L_Markets_Operating_In__c</fullName>
    <label>Markets Operating In?</label>
    <type>TextArea</type>
</CustomField>