force-app/main/default/objects/Lead/fields/W2L_Nature_of_Inquiry__c.field-meta.xml
<CustomField>
    <fullName>W2L_Nature_of_Inquiry__c</fullName>
    <label>Nature of Inquiry?</label>
    <type>TextArea</type>
</CustomField>