force-app/main/default/objects/Lead/recordTypes/Filtration.recordType-meta.xml
<RecordType>
    <fullName>Filtration</fullName>
    <active>true</active>
    <businessProcess>Healthcare</businessProcess>
    <label>Filtration</label>
</RecordType>