force-app/main/default/objects/Lead/validationRules/Additional_Details_Other.validationRule-meta.xml
<ValidationRule>
    <fullName>Additional_Details_Other</fullName>
    <active>true</active>
    <errorConditionFormula>AND(

    TEXT(Additional_Details__c) = &quot;Other&quot;,

    ISBLANK(Additional_Details_Other__c)

)</errorConditionFormula>
    <errorMessage>Please fill out the &#39;Additional Details - Other&#39; free text field.</errorMessage>
</ValidationRule>