force-app/main/default/objects/Lead/listViews/Follow_Up_60_Days.listView-meta.xml
<ListView>
    <fullName>Follow_Up_60_Days</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.STATE</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.UNREAD</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LEAD.STATUS</field>
        <operation>equals</operation>
        <value>Follow Up - 60 Days</value>
    </filters>
    <label>Follow Up - 60 Days</label>
</ListView>